# actix-sqlx-workspace

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
apps/api/: Cargo.toml
apps/api/src/: ama.rs  authorization.rs  main.rs
apps/queue-handler/: Cargo.toml
apps/queue-handler/src/: main.rs
lib/authorization/: Cargo.toml
lib/authorization/src/: forget_password.rs  lib.rs  login.rs  register.rs  reset_password.rs
lib/authorization/src/fixtures/: setup-account.sql
lib/configuration/: Cargo.toml
lib/configuration/src/: ama.rs  lib.rs
lib/configuration/src/fixtures/: setup-ama.sql
lib/integration/: Cargo.toml
lib/integration/src/: lib.rs  sendgrid.rs  sqs.rs  stripe.rs  twilio.rs
lib/services/: Cargo.toml
lib/services/src/: db.rs  encryption.rs  error.rs  guard.rs  lib.rs  middleware.rs  query_param.rs  queue.rs  response.rs  users.rs
lib/services/src/crud/: traits.rs
migrations/: 20230920052434_base.sql  20230920053259_add_ama.sql
