[workspace]

members = [
    "apps/*",
    "lib/*"
]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
http = "0.2.9"
tokio = "1.32.0"
serde = { version = "1.0.130" }
chrono = { version = "0.4.28" }
validator = { version = "0.16" }
actix-web-validator = "5.0.1"
serde_json = "1.0.96"
sqlx = "0.7.1"
async-trait = "0.1.72"
strum_macros = "0.25.1"
struct_iterable = "0.1.1"
scooby = "0.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
lambda-web = "0.2.1"
openssl = { version = "0.10" }
aws-config = "0.56.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "s"
