[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
actix-web-validator = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
lambda-web = { workspace = true, features = ["actix4"] }
openssl = { workspace = true, features = ["vendored"] }
anyhow = "1.0.72"
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "json", "migrate"] }

# Local dependencies
services = { path = "../../lib/services" }
authorization = { path = "../../lib/authorization" }
configuration = { path = "../../lib/configuration" }
