[package]
name = "queue-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenvy = "0.15"
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "json"] }
lambda-web = { workspace = true }
aws_lambda_events = "0.11.1"
# Local dependencies
services = { path = "../../lib/services" }
integration = { path = "../../lib/integration" }
