[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "json", "migrate"] }
serde_json = { workspace = true }
validator = { workspace = true, features = ["derive"] }
http = { workspace = true }
actix-web-validator = { workspace = true }
async-trait = { workspace = true }
strum_macros = { workspace = true }
scooby = { workspace = true }
struct_iterable = { workspace = true }

services = { path = "../services", features = ["admin"] }
